game engine and testing game engine implemented V1