@@ -2,6 +2,7 @@ package cat.itacademy.s05.t01.n01.service;
 
 import cat.itacademy.s05.t01.n01.dto.GameDTO;
 import cat.itacademy.s05.t01.n01.exception.ApiException;
+import cat.itacademy.s05.t01.n01.logic.GameEngine;
 import cat.itacademy.s05.t01.n01.mapper.GameMapper;
 import cat.itacademy.s05.t01.n01.model.Card;
 import cat.itacademy.s05.t01.n01.model.Game;
@@ -13,6 +14,7 @@ import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -21,16 +23,8 @@ public class GameServiceImpl implements GameService {
 
     private final GameRepository gameRepository;
     private final GameMapper gameMapper;
+    private final GameEngine gameEngine;
 
-    private Card drawCard() {
-        String[] suits = {"♠", "♥", "♦", "♣"};
-        String[] values = {"2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"};
-
-        String suit = suits[(int)(Math.random() * suits.length)];
-        String value = values[(int)(Math.random() * values.length)];
-
-        return new Card(value, suit);
-    }
 
     @Override
     public Mono<GameDTO> createGame(GameDTO dto) {
@@ -74,17 +68,27 @@ public class GameServiceImpl implements GameService {
     }
 
     @Override
-    public Mono<GameDTO> startGame(String gameId) {
-        return gameRepository.findById(gameId)
-                .switchIfEmpty(Mono.error(new ApiException("Game not found with id: " + gameId, HttpStatus.NOT_FOUND)))
+    public Mono<GameDTO> startGame(String id) {
+        return gameRepository.findById(id)
+                .switchIfEmpty(Mono.error(new ApiException("Game not found with id: " + id, HttpStatus.NOT_FOUND)))
                 .flatMap(game -> {
-                    game.setPlayerHand(List.of(drawCard(), drawCard()));
-                    game.setDealerHand(List.of(drawCard()));
-                    game.setStatus(GameStatus.PLAYING);
-                    return gameRepository.save(game);
-                })
-                .map(gameMapper::toDto);
+                    List<Card> playerHand = Arrays.asList(gameEngine.drawCard(), gameEngine.drawCard());
+                    List<Card> dealerHand = Arrays.asList(gameEngine.drawCard(), gameEngine.drawCard());
+
+                    GameStatus status = gameEngine.evaluateWinner(playerHand, dealerHand);
+
+                    game.setPlayerHand(playerHand);
+                    game.setDealerHand(dealerHand);
+                    game.setStatus(status);
+
+                    return gameRepository.save(game).map(gameMapper::toDto);
+                });
     }
 
 }
+
+
+
+
+
 
